--- a/package.json
+++ b/package.json
@@ -11,10 +11,17 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
-    "socket.io": "^4.1.3",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.13.7",
+    "passport": "^0.4.1",
+    "passport-jwt": "^4.0.0",
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^6.1.0",
+    "socket.io": "^4.1.3",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
